trying out theme setups and getting the images to show up

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -331,6 +331,12 @@
     {% if template == 'page.toc' %}
       {{ 'jquery.tableofcontents.min.js' | asset_url | script_tag }}
     {% endif %}
+    <script type="text/javascript" src="//use.typekit.net/win4bdd.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+    <script type="text/javascript" src="scripts/jquery.min.js"></script>
+    <script type="text/javascript" src="scripts/echo.min.js"></script>
+    <script src="scripts/main.js"></script>
 <!-- begin olark code -->
 <script data-cfasync="false" type='text/javascript'>/*<![CDATA[*/window.olark||(function(c){var f=window,d=document,l=f.location.protocol=="https:"?"https:":"http:",z=c.name,r="load";var nt=function(){
 f[z]=function(){
