--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -32,6 +32,7 @@
   {{ content_for_header }}
 
   {{ 'style.css' | asset_url | stylesheet_tag }}
+  {{ 'stopgap.css' | asset_url | stylesheet_tag }}
 
   {% if settings.logo_font contains 'Google' %}
   {% assign logo_font_parts = settings.logo_font | split: '_' %}
@@ -76,7 +77,7 @@
 
 </head>
 
-<body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | split: '.' | first | remove: '/' | remove: '_' }}">
+<body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | split: '.' | first | remove: '/' | remove: '_' }} {% if template == 'index' %}index{% endif %}">
 
   <div id="container">
 
@@ -112,6 +113,8 @@
         </a> -->
 
       </div><!-- #cart-summary -->
+
+      <div class="old-header-wrapper">
 
       {% if settings.use_logo %}
       <a id="logo" href="/" role="banner">
@@ -172,6 +175,7 @@
       {% if settings.use_logo and template == 'index' %}
       <h1 class="hidden">{{ shop.name }}</h1>
       {% endif %}
+      </div>
 
     </header><!-- #header -->
 
@@ -334,9 +338,9 @@
     <script type="text/javascript" src="//use.typekit.net/win4bdd.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
-    <script type="text/javascript" src="scripts/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/echo.min.js"></script>
-    <script src="scripts/main.js"></script>
+    <script type="text/javascript" src="{{ 'jquery.min.js' | asset_url }}"></script>
+    <script type="text/javascript" src="{{ 'echo.min.js' | asset_url }}"></script>
+    <script src="{{ 'main.js' | asset_url }}"></script>
 <!-- begin olark code -->
 <script data-cfasync="false" type='text/javascript'>/*<![CDATA[*/window.olark||(function(c){var f=window,d=document,l=f.location.protocol=="https:"?"https:":"http:",z=c.name,r="load";var nt=function(){
 f[z]=function(){
