--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -11,10 +11,10 @@
     <navivation id="main-nav" class="preload">
             <div id="logo"></div>
             <ul id="nav-items">
-                <li><a href="">Make One</a></li>
-                <li><a href="">Art Prints</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="/products/gifchop">Make Your Own</a></li>
+                <li><a href="/collections/artists">Art Prints</a></li>
+                <li><a href="/about-us">About Gifpop</a></li>
+                <li><a href="http://blog.gifpop.io">Gifpop Blog</a></li>
             </ul>
         </navivation>
 
@@ -32,7 +32,7 @@
                             <h2>Turn your GIFs into IRL prints</h2>
                             <p>Through the magic of lenticular printing, Gifpop can turn all of your wildest GIFs in to real printed animated pieces.</p>
                             <div class="cta">
-                                <a class="button scroll-button" href="#home-browse"><img src="{{ 'down-arrow.svg' | asset_url }}" width="25px" height="25px" /></a>
+                                <a class="link-button scroll-button skew" href="#home-browse"><img src="{{ 'down-arrow.svg' | asset_url }}" width="25px" height="25px" /></a>
                             </div>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                             <h2>Use your favorite GIF</h2>
                             <p>GIFs are everywhere, you may have made some of your own. No matter the GIF we can Gifpop it for you.</p>
                             <div class="cta">
-                                <a class="button scroll-button" href="/make.html">Make One</a>
+                                <a class="link-button scroll-button skew" href="/products/gifchop">Make One</a>
                             </div>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                             <h2>Time for Magic</h2>
                             <p>We take your GIFs and do some magic to turn them into 10 frame lenticular prints that come to life when you move them</p>
                             <div class="cta">
-                                <a class="button scroll-button" href="/about.html">How it Works</a>
+                                <a class="link-button scroll-button skew" href="/how-it-works">How it Works</a>
                             </div>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             <h2>Here's what you get</h2>
                             <p>A beautiful print that captures the movement of your GIF, in your hands. Also check out our limited artists prints.</p>
                             <div class="cta">
-                                <a class="button scroll-button" href="/about.html">Artists Prints</a>
+                                <a class="link-button scroll-button skew" href="/collections/artists">Artists Prints</a>
                             </div>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                                     <img src="" data-echo="{{ 'remastered.gif' | asset_url }}" width="250px" height="250px" />
                                     <img src="" data-echo="{{ 'pixelfucks.gif' | asset_url }}" width="250px" height="250px" />
                                 <div class="cta">
-                                    <a class="button" href="/artists.html">See More</a>
+                                    <a class="link-button skew" href="/collections/artists">See More</a>
                                 </div>
                             </div>
 
@@ -218,34 +218,6 @@ line-height: 33px;">Gifpop is a tool to make custom cards from animated gifs, us
               <p><b>An easier way to give the gift of gif!</b><br> Our gift cards are available in $10, $20, and $50 denominations. Just click on the amount you'd like to purchase, and we will email you a printable gift card within 24 hours.</p>
             </div>
           </div>
-
-          <hr class="title" />
-          <div class="title-text header-text" style="width:300px;">Frequently Asked Questions</div>
-          <div class="question">
-            <p class="header">Do you do bulk printing?</p>
-            <p>Yes! It’s much more cost-effective for us to bulk print jobs. Contact us for pricing at omg@gifpop.io</p>
-          </div>
-          <div class="question">
-            <p class="header">Are you looking for artists?</p>
-            <p>We’re always interested in featuring new artists! Submit examples of your work for us to <a href="http://blog.gifpop.io/submit">share on our tumblr</a>.</p>
-          </div>
-          <div class="question">
-            <p class="header">How long will my order take?</p>
-            <p>It will take only 2-3 business days to ship your order. Did we mention Gifpop is made in NY?</p>
-          </div>
-          <div class="question">
-            <p class="header">Do you do international shipping?</p>
-            <p>Yes! We ship worldwide for $10.50 flat.</p>
-          </div>
-
-          <div class="signup">
-            <p>TO BE NOTIFIED WHEN WE ANNOUNCE NEW PRODUCTS,<br>
-            ARTISTS, OR FEATURES, SUBSCRIBE TO OUR MAILING LIST!</p>
-            <div id="mc_embed_signup" class="splash-block">
-              <form action="http://gifpop.us3.list-manage2.com/subscribe/post?u=5dfc43de7b814dbcba9d1f3f9&amp;id=99ab59266f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-              </form>
-            </div>
           </div> -->
 
 
