--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -32,7 +32,7 @@
   {{ content_for_header }}
 
   {{ 'style.css' | asset_url | stylesheet_tag }}
-  {{ 'stopgap.css' | asset_url | stylesheet_tag }}
+  {{ 'chris.css' | asset_url | stylesheet_tag }}
 
   {% if settings.logo_font contains 'Google' %}
   {% assign logo_font_parts = settings.logo_font | split: '_' %}
@@ -118,7 +118,7 @@
 
       {% if settings.use_logo %}
       <a id="logo" href="/" role="banner">
-        {{ 'logo.png' | asset_url | img_tag: shop.name }}
+        {{ 'gifpop-logo.svg' | asset_url | img_tag: shop.name }}
       </a><!-- #logo -->
       {% else %}
       <h1 id="title" class="smooth" role="banner"><a href="/"></a></h1>
@@ -337,8 +337,6 @@
     {% endif %}
     <script type="text/javascript" src="//use.typekit.net/win4bdd.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
-    <script type="text/javascript" src="{{ 'jquery.min.js' | asset_url }}"></script>
     <script type="text/javascript" src="{{ 'echo.min.js' | asset_url }}"></script>
     <script src="{{ 'main.js' | asset_url }}"></script>
 <!-- begin olark code -->
